--- a/01_冒泡排序/index.html
+++ b/01_冒泡排序/index.html
@@ -23,17 +23,16 @@
 				height:auto;
 				padding:1rem;
 				margin:2rem auto 0;
-				box-shadow:0 0 0.5rem 0.5rem #666;
 				border-radius:1rem;
+				box-shadow:0 0 0.5rem 0.5rem #666;
 				font-size:0.7rem;
 				font-family:微软雅黑;
 			}
 			h3{
 				width:100%;
 				height:2rem;
-				display:flex;
-				justify-content:center;
-				align-items:center;
+				text-align:center;
+				line-height:2rem;
 				background-color:black;
 				color:white;
 				margin:0.5rem 0;
@@ -56,32 +55,39 @@
 				}
 			}
 		</style>
-		<title>JS——插入排序算法</title>
+		<title>JS——冒泡排序</title>
 	</head>
 	<body>
 		<main>
 			<section>
-				<h3>JS——插入排序算法</h3>
+				<h3>冒泡排序</h3>
 				<ul>
-					<li></li>
+					<li>从未排序元素的第一个开始，依次与相邻元素比较，大的往后沉，小的往前浮，比较趟数不一定。(冒泡排序比较任何两个相邻的项，如果第一个比第二个大，则交换它们。)</li>
+					<li>时间复杂度为O(n^2);排序趟数与原始序列中数据元素的排列有关（1 ~ (n-1次)）;是一种稳定性排序方法。</li>
+					<li>它在所有排序算法中最简单，从运行的时间来看，冒泡排序是最差的一个。</li>
 				</ul>
 			</section>
 		</main>
 		<script type="text/javascript">
-			function sort(arr){
-				for(var i=1; i<arr.length; i++){
-					for(var j=0; j<i; j++){
-						if(arr[i]<arr[j]){
-							var temp = arr[i];
-							arr[i] = arr[j];
-							arr[j] = temp;
+			function modifiedBubbleSort(arr){
+				for(var i=0; i<arr.length; i++){
+					for(var j=0; j<arr.length-i-1; j++){
+						if(arr[j] > arr[j+1]){
+							swap(arr,j,j+1);
 						}
 					}
 				}
 				return arr;
 			}
-			var arr = [3,4,2,7,2,8,1,6,24,62,12];
-			var result = sort(arr);
+			
+			function swap(arr,index1,index2){
+				var temp = arr[index1];
+				arr[index1] = arr[index2];
+				arr[index2] = temp;
+			}
+			
+			var arr1 = [45,65,32,54,21,23,56,32,11,54];
+			var result = modifiedBubbleSort(arr1);
 			console.log(result);
 		</script>
 	</body>
